Fix spacing around portfolio paragraph

--- a/app/scss/components/_portfolio.scss
+++ b/app/scss/components/_portfolio.scss
@@ -15,6 +15,11 @@
 	p {
 		margin-left: 20px;
 		margin-top: 20px;
+
+		@media (max-width: 600px) {
+			margin-left: 0;
+			margin-top: 0;
+		}
 	}
 
 	ul {
